calendario y modal funcionando

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -91,7 +91,7 @@
 
 
 
-  <ion-card>
+  <!-- <ion-card>
     <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada"
       (ionChange)="mostrarInformacion()"></ion-datetime>
 
@@ -104,7 +104,7 @@
       <br>
       {{ eventoSeleccionado.descripcion }}
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
 
 
   <h2>FALLERA MAYOR</h2>
