--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -22,7 +22,9 @@
     </ion-card-content>-->
 
     <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada" presentation="date"
-      [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()"></ion-datetime>
+      [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()">
+      
+    </ion-datetime>
 
     <ion-card *ngIf="fechaDestacadaSeleccionada">
       <ion-card-header>
@@ -40,9 +42,20 @@
 
   </ion-card>
 
-    <ion-button (click)="mostrarFormulario()">Agregar Evento</ion-button>
-    
+  <!--     <ion-button expand="block" (click)="setOpen(true)" (click)="mostrarFormulario()">Agregar Evento</ion-button>
+ -->
+  <ion-button expand="block" (click)="cancel(true)">Open</ion-button>
+  <ion-modal [isOpen]="isModalOpen">
     <ion-card *ngIf="mostrarForm">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="cancel(false)">Cancel</ion-button>
+        </ion-buttons>
+        <ion-title>Nuevo evento</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="agregarEvento()" [strong]="true">Confirm</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
       <ion-card-content>
         <ion-item>
           <ion-label position="floating">Nombre del evento</ion-label>
@@ -58,12 +71,11 @@
           <ion-datetime displayFormat="DD/MM/YYYY HH:mm" [(ngModel)]="nuevoEvento.fechaHora" required></ion-datetime>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Subir foto (opcional)</ion-label>
           <ion-input type="file" accept="image/*" (change)="handleFileInput($event)"></ion-input>
         </ion-item>
-        <ion-button (click)="agregarEvento()">Agregar</ion-button>
       </ion-card-content>
     </ion-card>
+  </ion-modal>
 
 
 
