--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,5 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" class="topTitle">
-        <h1>Sóc de la <span class="falla"> falla</span>, de la falla del <span class="mercat">mercat</span></h1>
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <app-cabecera></app-cabecera>
 
   <!--   <ion-button expand="block" (click)="setOpen(true)">Open</ion-button> -->
   <ion-modal [isOpen]="isModalOpen">
