--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,18 +1,12 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" class="topTitle">
-        <h1>Sóc de la <span class="falla"> falla</span></h1>
-        <h1>de la falla del <span class="mercat">mercat</span></h1>
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <app-cabecera></app-cabecera>
+
 
   <ion-card>
 
     <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada" presentation="date"
       [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()">
-      
+
     </ion-datetime>
 
     <ion-card *ngIf="fechaDestacadaSeleccionada">
