--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,6 +12,10 @@
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="chatbubbles-outline"></ion-icon>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4" href="/tabs/tab4">
+      <ion-icon aria-hidden="true" name="logo-instagram"></ion-icon>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
