componente cabecera casi acabado

--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -1,8 +1,8 @@
 <ion-header collapse="condense">
   <ion-toolbar>
     <ion-title size="large" class="topTitle">
-      <h1>Sóc de la <span class="falla"> falla</span></h1>
-      <h1>de la falla del <span class="mercat">mercat</span></h1>
+      <h1>{{ primeraLinea }} <span class="falla"> {{ primeraPalabra }}</span></h1>
+      <h1>{{  segundaLinea }} <span class="mercat">{{ segundaPalabra }}</span></h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
