--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,6 @@
 <ion-content [fullscreen]="true">
-  <app-cabecera></app-cabecera>
+  <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea"
+    [segundaPalabra]="segundaPalabra"></app-cabecera>
 
 
   <ion-card>
