--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
-  <app-cabecera></app-cabecera>
+  <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea" [segundaPalabra]="segundaPalabra" ></app-cabecera>
 
   <!--   <ion-button expand="block" (click)="setOpen(true)">Open</ion-button> -->
   <ion-modal [isOpen]="isModalOpen">
