--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -3,21 +3,29 @@
   <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea"
     [segundaPalabra]="segundaPalabra"></app-cabecera>
 
+  <!-- Mostrar la primera foto por separado -->
   <div class="centered-photo">
-    <ion-img src="../../assets/images/50aniversari.jpg" class="fotoGrande"></ion-img>
+    <ion-img [src]="photos[0]" class="fotoGrande"></ion-img>
   </div>
-
+  
   <div class="centered-text">
     <h1>LA FALLA DEL MERCAT</h1>
   </div>
-
+  
+  <!-- Iterar sobre el resto de las fotos -->
   <ion-grid>
     <ion-row>
-      <ion-col size="4" *ngFor="let photo of photos">
-        <ion-img [src]="photo"></ion-img>
-      </ion-col>
+      <!-- Ignorar la primera foto en la iteración -->
+      <ng-container *ngFor="let photo of photos; let first = first">
+        <ng-container *ngIf="!first">
+          <ion-col size="4">
+            <ion-img [src]="photo"></ion-img>
+          </ion-col>
+        </ng-container>
+      </ng-container>
     </ion-row>
   </ion-grid>
+
 
 
 </ion-content>
