--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -2,4 +2,19 @@
 
   <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea"
     [segundaPalabra]="segundaPalabra"></app-cabecera>
+
+  <div class="imagen-redonda">
+    <img src="../../assets/images/placeholder.PNG" alt="" style="border-radius: 20vh;">
+  </div>
+
+  <div class="nombreUsuario">
+    <h1>Jesús García</h1>
+  </div>
+
+  <ion-fab vertical="bottom" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="options-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
