--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,126 +1,30 @@
 <ion-content [fullscreen]="true">
-  <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea" [segundaPalabra]="segundaPalabra" ></app-cabecera>
 
-  <!--   <ion-button expand="block" (click)="setOpen(true)">Open</ion-button> -->
-  <ion-modal [isOpen]="isModalOpen">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <img src="../../assets/images/50aniversari.jpg" alt="Falla grande" class="imagen-modal">
-      </ion-content>
-    </ng-template>
-  </ion-modal>
-
-  <app-swiper [imagenes]="imagenesFallaGrande"></app-swiper>
-  <app-swiper [imagenes]="imagenesFallaPequena"></app-swiper>
-
- 
-
-  <!-- <swiper-container speed="300" loop="true" css-mode="true" pagination="true">
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande1.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande2.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande3.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande4.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande5.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande6.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande7.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande8.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande9.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaGrande10.jpg" alt="Falla grande" class="imagen-falla">
-    </swiper-slide>
-  </swiper-container>
-
-  <swiper-container speed="300" loop="true" css-mode="true" pagination="true">
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña1.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña2.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña3.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña4.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña5.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña6.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña7.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña8.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña9.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-    <swiper-slide>
-      <img src="../../assets/images/fallaPeqqueña10.jpg" alt="Falla pequeña" class="imagen-falla">
-    </swiper-slide>
-  </swiper-container> -->
-
-  <h2>FALLERA MAYOR</h2>
-
-  <img src="../../assets/images/placeholder.PNG" alt="Faller mayor" class="imagen-falla">
-  <h4>Nombre de la fallera</h4>
-  <p class="texto-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aliquam. Non cupiditate enim
-    mollitia provident? Omnis hic ratione quibusdam dolor! Placeat ab aliquid ipsum nulla veritatis laudantium
-    aspernatur consequuntur nam.</p>
-
-
-  <h2>PRESIDENTE</h2>
-
-  <img src="../../assets/images/placeholder.PNG" alt="Presidente" class="imagen-falla">
-  <h4>Nombre del presidente</h4>
-  <p class="texto-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aliquam. Non cupiditate enim
-    mollitia provident? Omnis hic ratione quibusdam dolor! Placeat ab aliquid ipsum nulla veritatis laudantium
-    aspernatur consequuntur nam.</p>
-
-  <h2>FALLERA MAYOR INFANTIL</h2>
-
-  <img src="../../assets/images/placeholder.PNG" alt="Faller infantil" class="imagen-falla">
-  <h4>Nombre de la fallera infantil</h4>
-  <p class="texto-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aliquam. Non cupiditate enim
-    mollitia provident? Omnis hic ratione quibusdam dolor! Placeat ab aliquid ipsum nulla veritatis laudantium
-    aspernatur consequuntur nam.</p>
-
-  <h2>PRESIDENTE INFANTIL</h2>
-
-  <img src="../../assets/images/placeholder.PNG" alt="Presidente infantil" class="imagen-falla">
-  <h4>Nombre del presidente infantil</h4>
-  <p class="texto-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aliquam. Non cupiditate enim
-    mollitia provident? Omnis hic ratione quibusdam dolor! Placeat ab aliquid ipsum nulla veritatis laudantium
-    aspernatur consequuntur nam.</p>
-
-
-
+  <div class="circle-background"></div>
+  <div class="centered-image">
+    <img src="../../assets/images/fallallibret1.png" alt="Descripción de la imagen">
+  </div>
+  
+  <h1>Els nostres representants.</h1>
+  
+  <ion-card class="main-card" *ngFor="let item of [1, 2, 3, 4]">
+    <ion-card-content>
+      <div class="card-container" >
+        <div class="card" >
+          <div class="card-content">
+            <div class="circle">
+              <img src="../../assets/images/fallallibret1.png" alt="Imagen">
+            </div>
+            <h2>La nostra falla</h2>
+          </div>
+        </div>
+      </div>
+    </ion-card-content>
+  </ion-card>
+  
+  <ion-fab vertical="top" horizontal="start">
+    <ion-fab-button>
+      <ion-icon name="person"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
