--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
 
-  <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea"
-    [segundaPalabra]="segundaPalabra"></app-cabecera>
+  <div class="circle-background"></div>
+
 
   <!-- Mostrar la primera foto por separado -->
   <div class="centered-photo">
@@ -25,7 +25,6 @@
       </ng-container>
     </ion-row>
   </ion-grid>
-
 
 
 </ion-content>
