--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,11 @@
 
+/* Cambiar el color de fondo del tab bar */
+ion-tab-bar {
+  background-color: #ffffff;
+}
+
+/* Cambiar el color de los iconos de las pestañas */
+ion-tab-button {
+  color: #000000; /* Cambia el color a tu preferencia */
+}
+
