--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,9 +22,10 @@
     </ion-card-content>
   </ion-card>
   
-  <ion-fab vertical="top" horizontal="start">
+  <ion-fab vertical="top" horizontal="start" routerLink="/tab5">
     <ion-fab-button>
       <ion-icon name="person"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+  
 </ion-content>
