cambios de diseño

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,7 +2,7 @@
   width: 550px;
   height: 550px;
   border-radius: 50%;
-  background-color: #fa8f42;
+  background-color: #fa8f42;/*  */
   position: absolute;
   top: 35%;
   right: -275px;
