--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,3 +1,7 @@
+ion-content {
+  overflow: hidden;
+}
+
 .circle-background1 {
     width: 550px;
     height: 550px;
@@ -16,7 +20,7 @@
     height: 550px;
     border-radius: 50%;
     background-color: #fa8f42;
-    position: absolute;
+    position: fixed;
     top: 100%;
     right: -275px;
     transform: translate(0%, -50%);
@@ -72,7 +76,7 @@ ion-item {
 .circle-button {
     position: fixed;
     top: 47%;
-    left: 35%;
+    left: 40%;
     z-index: 999;
     width: 60px;
     height: 60px;
