añadido event-form y actualizado algunos estilos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -75,7 +75,7 @@
       <!-- Botón dentro de una fila para que esté debajo de la tarjeta -->
       <ion-row class="centered-row">
         <ion-fab-button>
-          <ion-icon name="add-circle-outline"></ion-icon>
+          <ion-icon name="add-circle-outline" routerLink="/event-form"></ion-icon>
         </ion-fab-button>
       </ion-row>
     </div>
