--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -24,21 +24,23 @@ ion-fab {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); // Fondo oscuro semi-transparente
+  background-color: rgba(0, 0, 0, 0); /* Fondo completamente transparente */
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999; // Asegúrate de que el modal esté por encima del contenido
+  z-index: 999; /* Asegúrate de que el modal esté por encima del contenido */
 }
 
+
 .modal-content {
-  width: 80%; // Tamaño del contenido del modal
-  background-color: #fff; // Fondo blanco del modal
+  width: 80%; /* Tamaño del contenido del modal */
+  background-color: #fff; /* Fondo blanco del modal */
   border-radius: 10px;
   padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Sombra con desplazamiento de 10px */
 }
+
 
 .main-card {
   background-color: #d9d9d9;
